--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,6 +7,10 @@
         {% block stylesheets %}
         {% endblock %}
 
+        {% block header %}
+            {% include "_components/_navbar.html.twig" %}
+        {% endblock %}
+
         {% block javascripts %}
         {% endblock %}
     </head>
