--- a/templates/subject/index.html.twig
+++ b/templates/subject/index.html.twig
@@ -3,18 +3,9 @@
 {% block title %}Hello SubjectController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <form method="post" action="{{ path('excel_to_json') }}" enctype="multipart/form-data">
+        <input type="file" name="excel_file">
+        <button type="submit">Convertir en JSON</button>
+    </form>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/working/bous0056/sae5-01-back/src/Controller/SubjectController.php'|file_link(0) }}">src/Controller/SubjectController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/working/bous0056/sae5-01-back/templates/subject/index.html.twig'|file_link(0) }}">templates/subject/index.html.twig</a></code></li>
-    </ul>
-</div>
 {% endblock %}
