--- a/templates/_components/_navbar.html.twig
+++ b/templates/_components/_navbar.html.twig
@@ -12,6 +12,7 @@
             <a href="/">Accueil</a>
             <a href="#">Historique</a>
             <a href="#">Profil</a>
+            <a href="/logout">Déconnexion</a>
         </nav>
     </header>
 {% endblock %}
