--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,8 +1,10 @@
-{% extends 'base.html.twig' %}
-
-{% block title %}Log in!{% endblock %}
-
+{% block stylesheets %}
+    <link rel="stylesheet" href="{{ asset('css/login.css') }}">
+{% endblock %}
 {% block body %}
+<header class="header">
+    <a href="#" class="logo">EDT</a>
+</header>
     <form method="post">
         {% if error %}
             <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
@@ -17,7 +19,7 @@
             </div>
         {% endif %}
 
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+        <h1 class="h3 mb-3 font-weight-normal">Connexion</h1>
         <label for="inputLogin">Login</label>
         <input type="text" value="{{ last_username }}" name="login" id="inputLogin" class="form-control" autocomplete="username" required autofocus>
         <label for="inputPassword">Password</label>
@@ -27,8 +29,8 @@
                value="{{ csrf_token('authenticate') }}"
         >
 
-        <button class="btn btn-lg btn-primary" type="submit">
-            Sign in
+        <button class="btn_connexion" type="submit">
+            Continuer
         </button>
     </form>
 {% endblock %}
