Initialisation of react

--- a/templates/semester/index.html.twig
+++ b/templates/semester/index.html.twig
@@ -3,17 +3,6 @@
 {% block title %}Semestres{% endblock %}
 
 {% block body %}
-    <h1>Liste des semestres</h1>
-    <a href="{{ path('app_semester_new') }}">Ajouter un semestre</a>
-    <div>
-        <ul>
-            {% for semester in semesters %}
-                <li>
-                    {{ semester.name }} : du {{ semester.startDate|date('d/m/Y') }} au {{ semester.endDate|date('d/m/Y') }}
-                    <a href="{{ path('app_semester_edit', {'id': semester.id}) }}">Modifier</a>
-                    <a href="{{ path('app_semester_delete', {'id': semester.id}) }}" onclick="return confirm('Êtes-vous sûr de vouloir supprimer ce semestre ?')">Supprimer</a>
-                </li>
-            {% endfor %}
-        </ul>
-    </div>
+    <div {{ react_component('App') }}></div>
+    <li><a href="{{ path('app_react_semesters') }}">Semestres</a></li>
 {% endblock %}
