Add style for profil page

--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -1,12 +1,18 @@
 {% extends 'base.html.twig' %}
 
+{% block stylesheets %}
+    <link rel="stylesheet" href="{{ asset('css/profil.css') }}">
+{% endblock %}
+
 {% block body %}
-    <h1>Profil</h1>
-    <p><strong>Prénom :</strong> {{ user.firstname }}</p>
-    <p><strong>Nom :</strong> {{ user.lastname }}</p>
-    <p><strong>Email :</strong> {{ user.email }}</p>
-    <p><strong>Statut :</strong> {{ user.roles[0] }}</p>
-    <p><strong>Adresse :</strong> {{ user.address }}  | {{ user.postalCode }}  {{ user.city }}</p>
-    <p><strong>Téléphone :</strong> {{ user.phone }}</p>
-    <a href="{{ path('app_user_edit', {'id': user.id}) }}">Modifier le profil</a>
+    <div class="profil">
+        <h1>Profil</h1>
+        <p><strong>Prénom </strong></p><p class="value_profil">{{ user.firstname }}</p>
+        <p><strong>Nom </strong></p><p class="value_profil">{{ user.lastname }}</p>
+        <p><strong>Email </strong></p><p class="value_profil">{{ user.email }}</p>
+        <p><strong>Statut </strong></p><p class="value_profil">{{ user.roles[0] }}</p>
+        <p><strong>Adresse </strong></p><p class="value_profil">{{ user.address }}  | {{ user.postalCode }}  {{ user.city }}</p>
+        <p><strong>Téléphone </strong></p><p class="value_profil">{{ user.phone }}</p>
+        <a href="{{ path('app_user_edit', {'id': user.id}) }}" class="btn_edit_profil">Modifier le profil</a>
+    </div>
 {% endblock %}
