--- a/public/css/formProfil.css
+++ b/public/css/formProfil.css
@@ -1,22 +1,19 @@
-body{
-    font-family: Roboto, sans-serif;
-}
-.profil{
-    margin-top: 5%;
+form{
     background: #EFEFEF;
-    margin-left: 35%;
-    margin-right: 35%;
+    margin: 2% 35% 3%;
     display: flex;
     flex-direction: column;
     border-radius: 10px;
+    padding: 2% ;
 }
+
 .btn_edit_profil{
     background-color: #0066FF;
     border-radius: 8px;
     width: 40%;
     margin-left: 30%;
     margin-top: 5%;
-    margin-bottom: 5%;
+    margin-bottom: 3%;
     border-style: none;
     box-sizing: border-box;
     color: #FFFFFF;
@@ -44,13 +41,21 @@ h1{
     display: flex;
     justify-content: center;
 }
-.profil .value_profil{
+
+.form-group{
+    display: flex;
+    flex-direction: column;
+}
+
+.form-group input{
     background-color: #D9D9D9;
     border-radius: 8px;
     margin-top: 2%;
     padding-left: 2%;
+    border-width: 0 ;
+    font-size: 16px;
 }
-.profil p{
-    margin-left: 5%;
-    margin-right: 5%;
+
+.form-group label{
+    margin-top: 2%;
 }
