--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,5 +3,5 @@
 {% block title %}Hello HomeController!{% endblock %}
 
 {% block body %}
-    <li><a href="{{ path('app_react_semesters') }}">Semestres</a></li>
+    <div {{ react_component('App') }}></div>
 {% endblock %}
