--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css?family=Poppins");
+
 body {
-    background-color: lightgray;
+    margin: 0;
+    font-family: "Poppins", sans-serif;
 }
