--- a/templates/assignment/index.html.twig
+++ b/templates/assignment/index.html.twig
@@ -7,6 +7,7 @@
     {% for assignment in assignments %}
         <li>
             Affectation {{ assignment.id }}
+            <a href="{{ path('app_assignment_delete', {'id': assignment.id}) }}" onclick="return confirm('Êtes-vous sûr de vouloir supprimer cette affectation ?')">Supprimer</a>
         </li>
     {% endfor %}
 {% endblock %}
