--- a/assets/styles/semesterList.css
+++ b/assets/styles/semesterList.css
@@ -28,3 +28,11 @@
     background-color: gray;
     color: white;
 }
+
+.semester-li {
+    border: 3px solid black;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 5px;
+    list-style-type: none;
+}
