--- a/assets/styles/semesterList.css
+++ b/assets/styles/semesterList.css
@@ -1,3 +1,6 @@
+body{
+    font-size: 25px;
+}
 .semesterList {
     display: flex;
     flex-wrap: wrap;
@@ -29,10 +32,53 @@
     color: white;
 }
 
+ul{
+    overflow-y: auto;
+    max-height: 750px;
+}
 .semester-li {
     border: 3px solid black;
     border-radius: 10px;
     padding: 10px;
-    margin: 5px;
+    margin: 20px;
     list-style-type: none;
 }
+h2 {
+    margin-left: 20px;
+    margin-top: 50px;
+}
+.groupe {
+    background-color: #F2F2F2 ;
+    margin-right: 5%;
+    padding-left: 10px;
+    border-radius: 10px;
+}
+.Postuler-container {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.Postuler{
+    background-color: #0066FF;
+    border-radius: 8px;
+    box-sizing: border-box;
+    color: #FFFFFF;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 14px;
+    font-weight: 500;
+    height: 40px;
+    line-height: 20px;
+    list-style: none;
+    outline: none;
+    padding: 10px 16px;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    transition: color 100ms;
+    vertical-align: baseline;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
