--- a/assets/styles/semesterList.css
+++ b/assets/styles/semesterList.css
@@ -49,7 +49,6 @@ h2 {
 }
 .groupe {
     background-color: #F2F2F2 ;
-    margin-right: 5%;
     padding-left: 10px;
     border-radius: 10px;
 }
@@ -80,5 +79,14 @@ h2 {
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
+    margin-top: 5px;
 }
 
+@media screen and (max-width: 800px) {
+    html{
+        font-size: 2em;
+    }
+    .semester-li {
+        height: 20%;
+    }
+}
