--- a/assets/styles/me.css
+++ b/assets/styles/me.css
@@ -1,5 +1,3 @@
-/* me.css */
-
 .meContainer {
     display: flex;
     flex-direction: column;
@@ -8,19 +6,18 @@
     padding: 20px;
     border-radius: 20px;
     margin: 0 auto;
-    width: 40%; /* Ajustez la largeur en fonction de vos besoins */
+    width: 40%;
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.5);
 }
 
 .meContainer p {
-    display: inline; /* Pour les afficher sur la même ligne */
+    display: inline;
     margin: 10px;
 }
 
-/* Style pour la barre de séparation */
 .meContainer .divider {
-    width: 10px; /* Ajustez la largeur de la barre */
-    margin: 0 10px; /* Marge entre les textes et la barre */
-    border-left: 1px solid #000; /* Ligne de séparation verticale */
-    padding-left: 10px; /* Espace à gauche de la ligne de séparation */
+    width: 10px;
+    margin: 0 10px;
+    border-left: 1px solid #000;
+    padding-left: 10px;
 }
