--- a/assets/styles/semesterList.css
+++ b/assets/styles/semesterList.css
@@ -1,6 +1,3 @@
-body{
-    font-size: 25px;
-}
 .semesterList {
     display: flex;
     flex-wrap: wrap;
@@ -11,6 +8,7 @@ body{
     margin-left: 20%;
     margin-right: 20%;
     border-radius: 20px;
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.5);
 }
 
 .semesterList div {
@@ -29,6 +27,7 @@ body{
 
 .semesterList a:hover {
     background-color: gray;
+    border-radius: 10px;
     color: white;
 }
 
