Adding tags in subject view

--- a/assets/styles/semesterDetail.css
+++ b/assets/styles/semesterDetail.css
@@ -78,6 +78,24 @@ form select {
     width: 100px;
 }
 
+
+.tag {
+    display: inline-block;
+    background-color: green;
+    color: #fff;
+    padding: 4px 8px;
+    margin-right: 8px;
+    border-radius: 4px;
+    font-size: 14px;
+    margin: 10px;
+}
+
+
+.tag:last-child {
+    margin-right: 0;
+}
+
+
 @media screen and (max-width: 800px) {
     .semester-li {
         width: 100%;
