Updating colors of tags in subject view

--- a/assets/styles/semesterDetail.css
+++ b/assets/styles/semesterDetail.css
@@ -81,7 +81,6 @@ form select {
 
 .tag {
     display: inline-block;
-    background-color: green;
     color: #fff;
     padding: 4px 8px;
     margin-right: 8px;
@@ -90,6 +89,13 @@ form select {
     margin: 10px;
 }
 
+.tag:nth-child(1) {
+    background-color: red;
+}
+
+.tag:nth-child(2) {
+    background-color: green;
+}
 
 .tag:last-child {
     margin-right: 0;
