number of groups per subject by adding the wishes

--- a/assets/styles/semesterDetail.css
+++ b/assets/styles/semesterDetail.css
@@ -78,6 +78,10 @@ form select {
     width: 100px;
 }
 
+ul {
+    list-style-type: none;
+}
+
 @media screen and (max-width: 800px) {
     .semester-li {
         width: 100%;
