--- a/templates/_components/_navbar.html.twig
+++ b/templates/_components/_navbar.html.twig
@@ -12,6 +12,7 @@
             <a href="/">Accueil</a>
             {% if is_granted('ROLE_ADMIN') %}
                 <a href="{{ path('admin') }}">Admin</a>
+                <a href="{{ path('app_user') }}">Voeux</a>
             {% endif %}
             <a href="#">Historique</a>
             <a href="{{ path('app_user_show')}}">Profil</a>
