--- a/templates/wish/_form.html.twig
+++ b/templates/wish/_form.html.twig
@@ -1,11 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Création de voeu{% endblock %}
+{% block title %}Modification{% endblock %}
 
 {% block body %}
     <div class="container">
-
-        <h1 class="mt-4">Création d'un voeu</h1>
 
         {{ form_start(form) }}
 
@@ -16,15 +14,6 @@
                 {{ form_errors(form.chosenGroups) }}
             </div>
         </div>
-
-        <div class="form-group">
-            {{ form_label(form.groupeType) }}
-            {{ form_widget(form.groupeType) }}
-            <div class="form-error">
-                {{ form_errors(form.groupeType) }}
-            </div>
-        </div>
-
         {{ form_end(form) }}
     </div>
 
